# gipIOS

./: .gitignore  CMakeLists.txt  README.md
examples/GlistAppIOS/: CMakeLists.txt
examples/GlistAppIOS/assets/databases/: putyoursqlitedatabaseshere.txt
examples/GlistAppIOS/assets/files/: putyourtextandbinaryfileshere.txt
examples/GlistAppIOS/assets/mipmaps/1-8k/: putyour8kmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/2-4k/: putyour4kmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/3-qhd/: putyourqhdmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/4-fullhd/: putyourfullhdmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/5-hd/: putyourhdmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/6-qfhd/: putyourqfhdmipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/7-wvga/: putyourwvgamipmapshere.txt
examples/GlistAppIOS/assets/mipmaps/8-hvga/: putyourhvgamipmapshere.txt
examples/GlistAppIOS/assets/shaders/: putyourshaderfileshere.txt
examples/GlistAppIOS/src/: gApp.cpp  gApp.h  gCanvas.cpp  gCanvas.h  main.cpp
src/: gIOSApp.cpp  gIOSApp.h  gIOSAppDelegate.h  gIOSAppDelegate.mm  gIOSCanvas.cpp  gIOSCanvas.h  gIOSInterface.cpp  gIOSInterface.h  gIOSMain.h  gIOSMain.mm  gIOSUtil.cpp  gIOSUtil.h  gIOSUtil.mm  gIOSViewController.h  gIOSViewController.mm  gIOSWindow.cpp  gIOSWindow.h
